Better direct support for ocaml.ppwarning attribute.
Previously, there was a dedicated traversal of the Parsetree to
collect and report all ocaml.ppwarning attributes.  This approach has
the drawback that ocaml.warning settings for the current scope around
the ocaml.ppwarnign attribute were not taken into account.

Thanks to previous commits, we have a specific place in the code were
all attributes go through.  So we re-use it to detect ocaml.ppwarning
attributes, completely avoiding the dedicated traversal and the
drawback mentioned above.

--- a/Changes
+++ b/Changes
@@ -42,7 +42,7 @@ Working version
   Mark Shinwell and Leo White)
 
 - MPR#7531, GPR#1162: Erroneous code transformation at partial applications
-  (Mark Shinwell) 
+  (Mark Shinwell)
 
 ### Standard library:
 
@@ -97,6 +97,11 @@ Working version
 - MPR#7444, GPR#1138: trigger deprecation warning when a "deprecated"
   attribute is hidden by signature coercion
   (Alain Frisch, report by bmillwood, review by Leo White)
+
+- GPR#1248: support "ocaml.warning" in all attribute contexts, and
+  arrange so that "ocaml.ppwarning" is correctly scoped by surrounding
+  "ocaml.warning" attributes
+  (Alain Frisch, review by ...)
 
 ### Manual and documentation:
 
