--- a/Changes
+++ b/Changes
@@ -15,10 +15,6 @@ be mentioned in the 4.06 section below instead of here.)
 
 ### Type system:
 
-- GPR#1370: Fix code duplication in Cmmgen
-  (Vincent Laviron, with help from Pierre Chambart,
-   reviews by Gabriel Scherer and Luc Maranget)
-
 ### Standard library:
 
 ### Other libraries:
@@ -33,6 +29,13 @@ be mentioned in the 4.06 section below instead of here.)
   (Valentin Gatien-Baron)
 
 ### Code generation and optimizations:
+
+- GPR#1370: Fix code duplication in Cmmgen
+  (Vincent Laviron, with help from Pierre Chambart,
+   reviews by Gabriel Scherer and Luc Maranget)
+
+- GPR#1482: Adapt and optimize the code generation for try-with blocks
+  (Vincent Laviron, Mark Shinwell and Pierre Chambart)
 
 ### Runtime system:
 
